--- a/demo/style.css
+++ b/demo/style.css
@@ -1,27 +1,41 @@
 body {
     margin: 15px;
 }
-.canvas-wrapper {
+
+#canvas-wrapper {
     position: relative;
-    background: linear-gradient(45deg, rgb(218, 218, 218) 25%, transparent 25%, transparent 75%, rgb(218, 218, 218) 75%),
-        linear-gradient(45deg, rgb(218, 218, 218) 25%, transparent 25%, transparent 75%, rgb(218, 218, 218) 75%);
-    background-size: 20px 20px;
-    background-position: 0 0, 10px 10px;
     width: fit-content;
 }
 
-.canvas-wrapper canvas {
+.itimatsu-lite{
+    background: linear-gradient(45deg, var(--gray) 25%, transparent 25%, transparent 75%, var(--gray) 75%),
+        linear-gradient(45deg, var(--gray) 25%, transparent 25%, transparent 75%, var(--gray) 75%);
+    background-size: 20px 20px;
+    background-position: 0 0, 10px 10px;
+    background-color: var(--white);
+}
+.itimatsu-dark{
+    background: linear-gradient(45deg, var(--liteBrack) 25%, transparent 25%, transparent 75%, var(--liteBrack)75%),
+        linear-gradient(45deg, var(--liteBrack) 25%, transparent 25%, transparent 75%, var(--liteBrack) 75%);
+    background-size: 20px 20px;
+    background-position: 0 0, 10px 10px;
+    background-color: var(--darkGray);
+}
+#canvas-wrapper canvas {
     position: relative;
 }
+
 .container {
     background-color: rgb(233, 233, 233);
     margin: 10px;
     padding: 10px;
 }
-.box{
+
+.box {
     margin: 10px;
 }
-.btn{
+
+.btn {
     margin: 2px;
     padding: 5px;
     background-color: rgb(151, 151, 151);
@@ -30,6 +44,20 @@ body {
     font-size: 80%;
     font-weight: bold;
 }
-.btn:active{
+
+.btn:active {
     background-color: rgb(54, 54, 54);
+}
+
+#canvas-wrapper {
+    width: 100%;
+    height: 70vh;
+    overflow: scroll;
+}
+
+:root {
+    --gray: rgb(218, 218, 218);
+    --darkGray:rgb(138, 138, 138);
+    --liteBrack:rgb(82, 82, 82);
+    --white:rgb(255, 255, 255);
 }
